--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,17 @@ sudo: false
 
 language: go
 go:
-- "1.11"
-- "1.x"
+  - "1.11.x"
+  - "1.12.x"
+  - "1.13.x"
+  - "1.x"
+
 env:
-- GO111MODULE=on
+  - GO111MODULE=on GOFLAGS=-mod=readonly GOPROXY=https://proxy.golang.org
+
+cache:
+  directories:
+    - $GOPATH/pkg/mod
 
 before_install:
 - go get -u golang.org/x/lint/golint
