--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ go:
   - "1.11.x"
   - "1.12.x"
   - "1.13.x"
+  - "1.14.x"
   - "1.x"
 
 env:
@@ -15,14 +16,15 @@ cache:
     - $GOPATH/pkg/mod
 
 before_install:
-- go get -u golang.org/x/lint/golint
-- go get github.com/mattn/goveralls
+  - curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $GOPATH/bin
+  - go mod download
+  - go get github.com/mattn/goveralls
 
 script:
-- golint ./...
-- go vet ./...
-- go test -covermode=count -coverprofile=profile.cov ./...
-- goveralls -coverprofile=profile.cov -service=travis-ci
+  - golangci-lint run ./...
+  - go vet ./...
+  - go test -covermode=count -coverprofile=profile.cov ./...
+  - goveralls -coverprofile=profile.cov -service=travis-ci
 
 notifications:
   email:
