--- a/.travis.yml
+++ b/.travis.yml
@@ -2,27 +2,24 @@ sudo: false
 
 language: go
 go:
-  - "1.11.x"
-  - "1.12.x"
-  - "1.13.x"
   - "1.14.x"
+  - "1.15.x"
   - "1.x"
 
 env:
-  - GO111MODULE=on GOFLAGS=-mod=readonly GOPROXY=https://proxy.golang.org
+  - GO111MODULE=on GOPROXY=https://proxy.golang.org
 
 cache:
   directories:
     - $GOPATH/pkg/mod
 
 before_install:
-  - curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $GOPATH/bin
+  - curl -sfL https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | bash -s -- -b $GOPATH/bin ${GOLANGCI_LINT_VERSION}
+  - GO111MODULE=off go get -u github.com/mattn/goveralls # Use `go install` in Go1.16
   - go mod download
-  - go get github.com/mattn/goveralls
 
 script:
   - golangci-lint run ./...
-  - go vet ./...
   - go test -covermode=count -coverprofile=profile.cov ./...
   - goveralls -coverprofile=profile.cov -service=travis-ci
 
