--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,30 +1,35 @@
 run:
   tests: false
-  timeout: 5m
+  deadline: 5m
+
 linters-settings:
   cyclop:
     max-complexity: 12
     skip-tests: true
+  gofumpt:
+    extra-rules: true
+
 linters:
   enable-all: true
   disable:
+    - interfacer # deprecated
+    - scopelint # deprecated
+    - maligned # deprecated
+    - golint # deprecated
     - exhaustive
     - exhaustivestruct
     - forcetypeassert
     - gochecknoglobals
     - gochecknoinits
-    - gocognit
-    - gocyclo
     - goerr113
-    - golint
     - gomnd
-    - interfacer
-    - maligned
-    - nestif
-    - noctx
     - nlreturn
-    - scopelint
     - wrapcheck
     - wsl
-    - gofumpt
-    - godox
+
+issues:
+  exclude-use-default: false
+  exclude-rules:
+    - path: internal/bytes/buffer.go
+      linters:
+        - govet
