--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,10 +10,10 @@ jobs:
 
     strategy:
       matrix:
-        go-version: [ 1.15, 1.16 ]
+        go-version: [ 1.17, 1.18 ]
     runs-on: ubuntu-latest
     env:
-      GOLANGCI_LINT_VERSION: v1.40.1
+      GOLANGCI_LINT_VERSION: v1.45.0
 
     steps:
       - name: Install Go
@@ -37,6 +37,7 @@ jobs:
         uses: golangci/golangci-lint-action@v2
         with:
           version: ${{ env.GOLANGCI_LINT_VERSION }}
+          args: --go ${{ matrix.go-version }}
 
       - name: Run tests
         run: go test -covermode=count -coverprofile=coverage.out ./...
