chore: bump go to v1.21

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -22,6 +22,7 @@ linters:
     - nosnakecase # deprecated
     - varcheck # deprecated
     - exhaustivestruct # deprecated
+    - depguard
     - exhaustive
     - exhaustruct
     - forcetypeassert
