--- a/.golangci.yml
+++ b/.golangci.yml
@@ -11,6 +11,12 @@ formatters:
   settings:
     gofumpt:
       extra-rules: true
+    gci:
+      sections:
+        - standard
+        - default
+        - blank
+        - dot
   exclusions:
     generated: lax
 
